--- a/styles.css
+++ b/styles.css
@@ -32,17 +32,13 @@
 * {
   box-sizing: border-box;
 }
-body 
-{
-  
-}
+ 
 
   .banner-container
   {
     max-width: 720px;
     max-height: 300px;
     margin: 0 0 27px;
-   
    
   }
   .content-container
@@ -129,8 +125,8 @@ body
 
 .banner-wave {
   width: 720px;
-  height: 34px;
   
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0),grey 35%);
   object-fit: contain;
 }
 
