--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,33 @@
 @media screen and (max-width: 768px) {
-  .column {
-    width: 100%;
+  .padding
+  {
+    position: relative;
+    margin-bottom:10%;
+    
   }
+
+ 
    
   .text {
     display: grid;
     grid-template-columns: 1fr  ;
-    margin-top: -30%;
-    margin-left: 50%;
-    margin-bottom: 2%;
+    margin-top: -130px;
+    margin-left: 220px;
+    margin-bottom: 20px;
   }
   .image {
     
-    height: 100%;
+    height: 134px;
   }
-   
-}
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) 
-{
-  
-    
+ 
   .column {
-    float: left;
-    min-width: 140px;
-    margin-left: 3%;
-    border-radius: 4px;
-    box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.18);
-    background-color: #ffffff;
-
-    margin-top:3%;
-    margin-left: 3%;
+    width: 100%;
+    float: none;
+    position: static;
+    width:auto;
   }
 }
+ 
 
 * {
   box-sizing: border-box;
@@ -234,6 +229,7 @@
 .column {
   float: left;
   min-width: 140px;
+  
   margin-left: 3%;
   border-radius: 4px;
   box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.18);
@@ -244,18 +240,16 @@
 }
 /* Clear floats after the columns */
  
-.row{
-  
-}
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
  
-.temp
+.padding
 {
-  position: static;
-  margin-bottom:9%;
+  position: relative;
+  margin-bottom: 40px;
 }
 
